fix z-index

--- a/src/sass/components/_contact.scss
+++ b/src/sass/components/_contact.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100vw;
   height: 100%;
-  z-index: 2;
+  z-index: 1100;
   background: $aqua;
 
   display: flex;
